added internal links between pages

--- a/pages/main.html
+++ b/pages/main.html
@@ -7,6 +7,8 @@
     <title>W2D Assignment</title>
 </head>
 <body>
-    
+    <h1>W2D Assignment about links and navagation</h1>
+    <a href="page1.html">Good</a>
+    <a href="page2.html">Bad</a>
 </body>
 </html>
