--- a/pages/page1.html
+++ b/pages/page1.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good Stuff</title>
 </head>
-<body>
-    
-</body>
+    <body>
+    <H1>This is where good things happen.</H1> 
+    <a href="main.html">Main page</a>
+    </body>
 </html>
