--- a/pages/page2.html
+++ b/pages/page2.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Stuff</title>
 </head>
-<body>
-    
-</body>
+    <body>
+    <h1>This is where you will find the bad stuff.</h1> 
+    <a href="main.html">Main page</a>
+    </body>
 </html>
