--- a/pages/page2.html
+++ b/pages/page2.html
@@ -8,6 +8,6 @@
 </head>
     <body>
     <h1>This is where you will find the bad stuff.</h1> 
-    <a href="main.html">Main page</a>
+    <a href="index.html">Main page</a>
     </body>
 </html>
