Added External link

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,5 +10,7 @@
     <h1>W2D Assignment about links and navagation</h1>
     <a href="page1.html">Good</a>
     <a href="page2.html">Bad</a>
+    <a href="https://en.wikipedia.org/wiki/The_Good,_the_Bad_and_the_Ugly"
+    target="_blank">Wiki Movie</a>
 </body>
 </html>
