--- a/pages/page1.html
+++ b/pages/page1.html
@@ -8,6 +8,6 @@
 </head>
     <body>
     <H1>This is where good things happen.</H1> 
-    <a href="index.html">Main page</a>
+    <a href="/index.html">Main page</a>
     </body>
 </html>
