Added new pages and links.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,206 @@
 </head>
 <body>
     <h1>W2D Assignment about links and navagation</h1>
+
     <div><a href="/pages/page1.html">Good</a>
-        <a href="/pages/page2.html">Bad</a>
-        <a href="https://en.wikipedia.org/wiki/The_Good,_the_Bad_and_the_Ugly"
-        target="_blank">Movie Page</a>
+    <a href="/pages/page2.html">Bad</a>
+    <a href="https://en.wikipedia.org/wiki/The_Good,_the_Bad_and_the_Ugly"
+    target="_blank">Movie Page</a>
     </div>
     <br>
     <br>
     <div>
+        <h3 id="Random info">Random info</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque 
+        accusantium mollitia sequi. Animi dolore, non impedit, perspiciatis ea 
+        dicta minus quos quo vitae illum omnis dolores illo, in nulla. Voluptates 
+        possimus placeat, molestiae ratione iste nam fugiat obcaecati veniam non 
+        vitae harum ullam debitis odio earum veritatis autem, minima explicabo 
+        soluta eum ad nihil corporis sunt atque odit. Illo, quam fugit consequatur 
+        tempore ab a? Dolorum, error delectus omnis laborum officiis officia culpa 
+        voluptas id aperiam. Quasi ut eius, distinctio adipisci, fuga iste enim 
+        saepe cupiditate dignissimos, soluta ipsum a facere! Asperiores a 
+        praesentium accusamus saepe illum, eligendi fugiat quo? Pariatur rerum 
+        deleniti obcaecati possimus architecto illo adipisci enim dolores, sunt 
+        fuga quis cupiditate, impedit repellendus quae eius deserunt vel minus 
+        voluptatibus consequuntur quo sapiente ad exercitationem. Tenetur harum 
+        neque quisquam nostrum cum sapiente expedita, consequatur unde, 
+        cupiditate optio, vel libero incidunt debitis eveniet quis tempora 
+        dolore hic voluptatem? Nihil ipsa pariatur soluta quisquam ipsam sequi 
+        delectus qui beatae numquam reprehenderit illum exercitationem, odit hic 
+        repudiandae vitae adipisci dolorum. Excepturi, incidunt dignissimos 
+        nostrum repudiandae quisquam atque sapiente ad cumque assumenda. 
+        Omnis repellat neque illum adipisci, quas atque tempora libero, 
+        voluptatem, voluptatibus error unde ipsam harum ut? Quia eum ratione 
+        cum autem fuga incidunt saepe cupiditate officia voluptatum magni nam 
+        ab qui adipisci, voluptate corporis, sed ut doloribus doloremque 
+        recusandae. Molestias magni deserunt unde natus, laboriosam expedita 
+        quasi nesciunt nostrum! Vitae tenetur repellendus, eum minima ducimus 
+        perferendis expedita ipsum! Similique a autem commodi harum et quod 
+        nisi dolorum molestias, officiis facere, exercitationem sequi reiciendis 
+        quidem cum eaque quasi. Aut quasi nihil iure officiis praesentium 
+        aliquam! Corporis, deserunt incidunt possimus repellendus iure 
+        optio voluptatem excepturi at a vitae officiis ipsum eveniet rem, 
+        quae minus dolore nulla deleniti dolores modi vero pariatur ipsa inventore.
+        Ipsum quisquam veniam cupiditate dicta. Expedita amet quas fugit nulla 
+        nesciunt necessitatibus aspernatur, sint quos recusandae ut iusto 
+        accusantium. Eius natus harum accusantium dignissimos quo dolorum 
+        voluptatibus adipisci quia quidem. Ea, ducimus rem. Harum id dicta sed 
+        pariatur laborum. Nisi, voluptates repudiandae eum quisquam vel id sed 
+        architecto aliquam tempore dolore dolorem mollitia recusandae. Natus 
+        ad nemo maiores minima, nam, architecto iure sit sequi eum doloremque 
+        sapiente amet ut. Possimus vitae corrupti ipsa deleniti rerum cumque, 
+        quaerat magnam praesentium laborum ipsum recusandae molestiae corporis 
+        odio qui. Quo expedita debitis exercitationem! Cumque suscipit 
+        consequuntur rerum amet mollitia distinctio veniam ad reiciendis ratione, 
+        doloremque quidem sit labore perspiciatis perferendis magni in! 
+        Molestias sed veritatis, ipsa nam dolorem sunt? Saepe at libero 
+        blanditiis doloremque accusamus veniam error quod itaque consectetur 
+        tempore sed facilis temporibus, deleniti corrupti dignissimos, tenetur 
+        cupiditate nisi eius aspernatur dicta. Dolore pariatur modi sapiente 
+        cupiditate perferendis earum temporibus maxime? Voluptate dolorem 
+        distinctio, similique earum aspernatur, dicta sequi adipisci modi 
+        aliquam consectetur minima, aliquid et eos dignissimos rerum exercitationem!
+        Nisi sed quibusdam laudantium quia, praesentium sequi quod voluptate 
+        dolores non quo. Distinctio, magni! Non voluptates, dignissimos quidem 
+        adipisci sequi quibusdam cumque atque dolores, officia, tempora laboriosam
+        neque exercitationem ipsa quis vel! Tempora placeat consequatur suscipit 
+        dolore magnam! Quia, blanditiis et!</p>
+        </div>
+        <h3 id="PART 2">Part 2</h3>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Laboriosam dolorum eum illum maiores libero non provident odit 
+                dolorem, omnis deleniti saepe modi, quidem necessitatibus explicabo
+                debitis ad facere ab sunt laudantium. Ab sequi laboriosam beatae 
+                deserunt dolorum excepturi quibusdam adipisci, incidunt amet 
+                eligendi fugiat sed itaque explicabo est odio provident accusantium!
+                Sint sapiente perferendis dignissimos dicta harum, libero, ad 
+                exercitationem tempora, nostrum porro asperiores minima voluptatum
+                explicabo enim soluta vitae voluptas deserunt tenetur maiores quo
+                adipisci reprehenderit et? Recusandae dignissimos assumenda sit 
+                deserunt id, vero voluptatibus consectetur quod corrupti ex quia
+                magnam fugit accusamus debitis similique sunt placeat expedita 
+                quo, deleniti commodi? Nemo adipisci sed dolores voluptate 
+                molestias cupiditate odio maxime ut ad perferendis amet quam 
+                illum, fugit ex quo minima consequuntur beatae nostrum debitis 
+                in sapiente quaerat officiis, nulla hic. Laudantium nulla 
+                suscipit voluptas? Aperiam, dolore quas? Quaerat, sit fugiat 
+                maiores eius alias aut assumenda omnis eaque neque veritatis 
+                reiciendis beatae laboriosam aliquid, placeat consequatur 
+                pariatur. Debitis itaque veniam possimus ipsa, eligendi minus,
+                ut voluptatum qui sunt animi a aperiam, quisquam recusandae 
+                praesentium. Quasi libero voluptate, aut itaque eum sint 
+                asperiores molestias blanditiis impedit deserunt corrupti 
+                facilis quos quis repellendus veritatis mollitia. Sit aliquam 
+                excepturi ipsum harum perspiciatis, animi iure dolorum, dolores
+                repellendus nemo reprehenderit esse labore illum ut illo 
+                porro? Et architecto optio velit saepe cum ullam fugit sit 
+                incidunt nobis ex, provident neque modi maxime, nemo similique
+                iure ad doloribus quis repellendus officiis quidem dolor 
+                sint corporis! Deleniti aspernatur quos numquam dolorem 
+                perferendis recusandae id, ipsam unde!
+            </div>
+            <div>
+            <h3 id="PART 3">Part 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Repudiandae, ratione est unde molestiae sunt accusamus 
+                    blanditiis et iure aut, dolorum dolorem qui quibusdam laborum
+                    accusantium nulla ad, eius quidem deleniti consequuntur? 
+                    Quo, officiis inventore voluptate nesciunt tempora 
+                    architecto amet at, eaque quas consectetur harum voluptas 
+                    iusto ratione. Aperiam, incidunt omnis natus ea nihil 
+                    cupiditate veritatis atque blanditiis ipsa quos ratione 
+                    nostrum, qui delectus praesentium exercitationem, ab 
+                    alias? Neque corporis ut exercitationem eaque mollitia 
+                    repellendus quidem explicabo eveniet alias ea, odit quas 
+                    qui nobis ratione ullam temporibus autem totam reiciendis 
+                    laboriosam a perferendis recusandae saepe! Adipisci 
+                    delectus similique ipsam atque molestiae architecto nam 
+                    consequuntur rerum iure, cupiditate maiores facilis 
+                    blanditiis perspiciatis, ipsa tenetur earum totam 
+                    consequatur nesciunt deserunt excepturi pariatur dolores 
+                    molestias! Perferendis minima saepe explicabo. Quisquam 
+                    explicabo, reiciendis impedit voluptatibus aliquid omnis,
+                    neque totam ad quas provident consequatur odio cupiditate
+                    quae error, assumenda minima quidem labore delectus
+                    veritatis natus laborum aspernatur temporibus veniam? 
+                    Expedita distinctio consectetur corporis vel hic 
+                    temporibus necessitatibus pariatur dignissimos 
+                    perspiciatis voluptates! Impedit at laborum ducimus v
+                    eniam iure nobis doloribus excepturi in voluptates 
+                    repellendus, rem, asperiores ipsam, aut quis placeat 
+                    quaerat aperiam! Vel, harum ut. Dicta hic asperiores 
+                    ipsam voluptates! Modi ipsa error inventore doloremque 
+                    consectetur facilis odio veritatis officiis ad placeat, 
+                    sit mollitia eveniet unde? Reiciendis dolorem sequi 
+                    incidunt consequuntur, temporibus sapiente et omnis hic 
+                    eos eaque, quam sit, iste similique eligendi quae 
+                    ratione quaerat laboriosam cumque nobis laudantium? 
+                    Quibusdam cumque impedit in veniam necessitatibus a 
+                    quaerat cupiditate molestias quis iure reiciendis, 
+                    eveniet aliquid adipisci sed nostrum laboriosam natus 
+                    culpa, laborum ratione soluta quisquam iusto, quas 
+                    delectus? Voluptate eum laborum atque deserunt voluptas
+                    at ad sint ea dolorum sequi a commodi rerum repellendus,
+                    temporibus consequuntur consectetur. Vitae reiciendis 
+                    consequatur, accusantium cumque aut accusamus eius 
+                    error praesentium. Cumque a expedita quisquam 
+                    distinctio, iusto sed iure tenetur accusamus eaque 
+                    dolore error necessitatibus alias possimus similique
+                    ipsa delectus accusantium repellat. Libero velit 
+                    voluptas quis repudiandae aut cupiditate natus debitis
+                    sit rerum dolorem veniam laborum ex harum dolor 
+                    deserunt impedit at aspernatur dignissimos, iste 
+                    animi assumenda atque blanditiis! Neque natus 
+                    accusamus id atque sequi quo numquam consequatur 
+                    explicabo error omnis perspiciatis iste voluptatem 
+                    odit rerum, temporibus dolores aperiam ratione 
+                    aliquid. Tempora pariatur suscipit illo facere 
+                    cupiditate iure iste veniam et voluptate, nesciunt
+                    natus earum, asperiores maxime officiis facilis 
+                    doloremque ducimus maiores veritatis id tenetur!
+                    Quidem expedita placeat aliquid voluptatibus et
+                    optio id explicabo? Recusandae sit nostrum 
+                    accusantium dicta molestias provident!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
+                    elit. Doloribus laudantium sed quae error quasi 
+                    expedita odio nesciunt quo sint distinctio accusantium
+                    nihil, incidunt dolor! Necessitatibus expedita optio 
+                    explicabo nulla laborum impedit nam fuga, odio qui 
+                    earum quos eligendi pariatur ab eaque voluptas dicta? 
+                    Modi delectus, quia neque magni autem sapiente 
+                    deserunt explicabo, dolorem molestias molestiae 
+                    sequi illo incidunt? Explicabo quos unde qui? Explicabo
+                    ut officiis porro quaerat ducimus tenetur, 
+                    consectetur iste! Quis aliquam explicabo eaque autem 
+                    tempora saepe suscipit asperiores dolores expedita 
+                    neque delectus, doloribus corporis alias eveniet? 
+                    Fugit vitae aliquid nam distinctio harum. Consequatur
+                    qui ad provident, tempore nisi temporibus? 
+                    Dignissimos, nisi sunt reiciendis sit deserunt 
+                    excepturi laudantium magnam cum dolor! Laborum nulla
+                    ea magni explicabo ipsa nostrum pariatur iure 
+                    dignissimos quia! Maiores nam, in porro corporis 
+                    quod animi laudantium eum sequi. Ex assumenda 
+                    maiores eveniet, earum expedita a? Voluptatibus 
+                    dolores illum totam deserunt officiis, asperiores 
+                    corporis neque fuga nam quia voluptas assumenda 
+                    officia quod recusandae porro itaque odio veniam 
+                    incidunt ducimus sit voluptatem ad vitae est enim? 
+                    Ipsa earum inventore enim voluptas id iste 
+                    explicabo ipsam aspernatur voluptatibus voluptates 
+                    reiciendis sapiente, deleniti, modi repellendus 
+                    neque quisquam accusamus eos eaque! Distinctio 
+                    necessitatibus accusamus magnam culpa consequatur
+                    quas dignissimos deserunt!</p>
+                </div>
+                <br>
+                <br>
+        <a href="#Random info"><button>TOP</button></a>
+        <a href="#PART 2"><button>Part 2</button></a>
+        <a href="#PART 3"><button>Part 3</button></a>
+        <br>
+        <br>
         <a href="mailto:name@gmail.com"> <button>Email Me</button></a>
         <a href="tel:5553234589"> <button>Call Me</button></a>
     </div>
